--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
 		"phpspec/phpspec": "~2.1",
-		"fzaninotto/faker": "~1.4"
+		"fzaninotto/faker": "~1.4",
+		"laracasts/integrated": "0.14.*"
 	},
 	"autoload": {
 		"classmap": [
